# anoncreds-on-ethereum

./: .env.example  .gitignore  Cargo.toml  OLDREADME.md  README.md  package-lock.json  package.json
anoncreds-registry-subgraph/: package.json  schema.graphql  subgraph.yaml
anoncreds-registry-subgraph/src/: anoncreds-registry.ts
anoncreds-smart-contracts-js/: hardhat.config.ts  package-lock.json
anoncreds-smart-contracts-js/contracts/: AnoncredsRegistry.sol
anoncreds-smart-contracts-js/scripts/: deploy.ts
did_ethr_anoncreds/: Cargo.toml  README.md
did_ethr_anoncreds_demo/: Cargo.toml  README.md
did_ethr_anoncreds_demo/src/: config.rs  ethers_client.rs  json_ledger_data_transformer.rs  main.rs  utils.rs
did_ethr_anoncreds_demo/src/anoncreds_method/: mod.rs  resolver.rs
did_ethr_anoncreds_demo/src/anoncreds_method/ledger_data_transformer/: status_list_update_ledger_data.rs
did_ethr_anoncreds_demo/src/roles/: holder.rs  issuer.rs  mod.rs  verifier.rs
did_ethr_linked_resources/: Cargo.toml  README.md  build.rs
did_ethr_linked_resources/src/: config.rs  lib.rs  registar.rs  registrar.rs  resolver.rs  utils.rs
did_ethr_linked_resources/src/contracts/: eth_did_registry.rs  ethr_dlr_registry.rs  mod.rs
did_ethr_linked_resources/src/subgraph/: query.rs
did_ethr_linked_resources/src/types/: input.rs  mod.rs  output.rs  query.rs
didethr-resolver-js/: README.md  index.js  package-lock.json  package.json
eth-anoncreds-rust-demo/: Cargo.toml  build.rs
eth-anoncreds-rust-demo/src/: anoncreds_eth_registry.rs  eth_did_registry.rs  main.rs  roles.rs  subgraph_query.rs  utils.rs
eth-anoncreds-rust-demo/src/anoncreds_method/: ethers_client.rs  mod.rs  registar.rs
eth-anoncreds-rust-demo/src/anoncreds_method/ledger_data_transformer/: mod.rs
eth-anoncreds-rust-demo/src/ledger/: did_linked_resource_id.rs  did_parsing_helpers.rs  ledger_data.rs  mod.rs  status_list_update_ledger_data.rs  subgraph_query.rs
eth-anoncreds-rust-demo/src/ledger/contracts/: eth_did_registry.rs  ethr_did_linked_resources_registry.rs  ethr_dlr_registry.rs  mod.rs
eth-anoncreds-rust-demo/src/ledger/did_linked_resources/: mod.rs  registar.rs  resolver.rs
eth-anoncreds-rust-demo/src/ledger/did_linked_resources/types/: input.rs  mod.rs  output.rs  query.rs
eth-anoncreds-rust-demo/src/ledger/ledger_data/: anoncreds_primitives_ledger_data.rs  anoncreds_primitives_ledger_data_transformers.rs  json_ledger_data.rs  json_ledger_data_transformer.rs  mod.rs  status_list_update_ledger_data.rs
eth-anoncreds-rust-demo/src/ledger/registries/: anoncreds_eth_registry.rs  eth_did_registry.rs  mod.rs
example-subgraph/: package.json  schema.graphql  subgraph.yaml
rust-demo/: Cargo.toml
smart-contracts/: hardhat.config.ts  package.json
test-sg-1/: networks.json  package-lock.json  package.json  subgraph.yaml
(+13 files in other folders)
